# Masters-Projects

Semester2/GridClusterAndCloudComputing/InvertedIndexFinalVer/: .gitignore  pom.xml
Semester2/ModelsInParallelProgramming/: .gitignore
Semester2/ModelsInParallelProgramming/hw1/: .gitignore  CMakeLists.txt  matrixGeneration.cpp  run_script.sh  sequential1.cpp
Semester2/ModelsInParallelProgramming/hw2_3/: CMakeLists.txt  hw23-times.xlsx  main.cpp  matrixGeneration.cpp  matrix_operations.h  run_script.sh
Semester2/ModelsInParallelProgramming/hw4_5/: CMakeLists.txt  main.cpp  matrix_operations.h  run_script.sh  time-comparison.xlsx
Semester2/ModelsInParallelProgramming/hw6_7/: .gitignore  CMakeLists.txt  mpi_cuda.cu  pure_cuda.cu  run_script.sh  time-comparison.xlsx  timer.h
Semester2/ScientificDataVizualization/: requirements.txt
Semester2/ScientificDataVizualization/individual project/: FAOSTAT_data_en_4-16-2025.csv  notebook.html  notebook.ipynb
Semester2/ScientificDataVizualization/lecture1/: c01.html  c01.ipynb  index.html
Semester2/ScientificDataVizualization/lecture2-3/: c02-03.html  c02-03.ipynb  m07.html
Semester2/ScientificDataVizualization/lecture4/: c04.html  c04.ipynb
Semester2/ScientificDataVizualization/lecture5/: c05-DH.html  c05.html  c05.ipynb
Semester2/SocialNetworkAnalysis/: Structural Holes in Social Networks.docx
Semester3/BigData/: README.md  grafana-dashboard-realtime.json  hadoop-compose.yml  requirements.txt
Semester3/BigData/project/: cassandra_schema.cql  historicalExctraction.py  (+1 more)
Semester3/DataMining/: README.md
(+114 files in other folders)
